# StarStrike.Space

./: .gitignore  CMakeLists.txt  CMakePresets.json  DXMigration.md  Folder.DotSettings  Makefile  README.md  agents.md  build.cmd  cmake-migration-plan.md  makefile.inc  path.mak
.github/: copilot-instructions.md
AGC/: AGC.h  AGC.vcxproj  AGC.vcxproj.filters  AGCEventsIDL.idl  IAGCCollectionImpl.h  IAGCRangesImpl.h
AllSrvUI/: AllSrvUI.cpp  AllSrvUI.h  makefile
Artwork/: CMakeLists.txt
Artwork/256/: CMakeLists.txt
Artwork/tools/: gen_source_mdl.cmake
Artwork/tools/pmesh/: acs02flat.pmx
Artwork/training/: makefile
FedSrv/: AGCGuids.cpp  AllSrvModuleIDL.h  CMakeLists.txt  DIALOGS.CPP  FedSrv.CPP  Server.vcxproj  Server.vcxproj.filters  allsrvmodule.cpp  allsrvmodule.h  config.h  fedmsg.h  fsmission.cpp  makefile  pch.cpp  pch.h
Igc/: CMakeLists.txt  Igc.vcxproj  missionigc.cpp
Inc/: AGCIDL.h  COMDEF.H  COMUTIL.H  XMLPtrs.h
MSRGuard/: makefile
Reloader/: makefile
SymGuard/: makefile
WinTrek/: CMakeLists.txt  CharInfoScreen.cpp  SquadsScreen.cpp  TrainingSlideshow.cpp  WinTrek.cpp  WinTrek.h  ZoneClubScreen.cpp  ZoneSquad.cpp  ZoneSquad.h  cdkeydialog.cpp  chatpane.cpp  clientdrones.cpp  console.cpp  consoledata.h  gameoverscreen.cpp  gamescreen.cpp  gamestartingscreen.cpp  hangarscreen.cpp  indicator.cpp  introscreen.cpp  leaderboardscreen.cpp  load.cpp  loadout.cpp  logon.cpp  newgamescreen.cpp  passworddialog.cpp  pch.h  screen.h  selpane.cpp  splashscreen.cpp  teampane.cpp  teamscreen.cpp  teleportpane.cpp  trainingscreen.cpp  trainingscreen_stub.cpp  trekapp.cpp  trekctrls.cpp  trekigc.cpp  trekinput.cpp  zoneeventsscreen.cpp
Zone/: Member.h  Squad.h
_Utility/: CMakeLists.txt  HitTest.cpp  Utility.vcxproj  listwrappers.h
allegiance-master/: Allegiance.sln  Makefile  makeexe.inc  makeexes  makefile.inc
allegiance-master/AGC/: makefile
allegiance-master/AutoUpdate/: makefile
allegiance-master/Club/: makefile
allegiance-master/FedSrv/: Server.vcxproj  Server.vcxproj.filters
allegiance-master/WinTrek/: Allegiance.vcxproj  WinTrek.cpp  makefile
allegiance-master/effect/: effect.vcxproj  effect.vcxproj.filters
allegiance-master/engine/: Engine.vcxproj
allegiance-master/fedperf/: makefile
allegiance-master/guids/: Guids.vcxproj
allegiance-master/lobby/: makefile
allegiance-master/mdlc/: mdlc.vcxproj
allegiance-master/sentinal/: makefile
allegiance-master/soundengine/: SoundEngine.vcxproj
allegiance-master/srvconfig/: makefile
allegiance-master/test/TCDeploy/: makefile
allegiance-master/test/TCObj/: makefile
allegiance-master/zlib/: ZLibrary.vcxproj
cliconfig/: makefile
clintlib/: AutoDownload.cpp  AutoDownload.h  CMakeLists.txt  ClintLib.vcxproj  ClintLib.vcxproj.filters  clintlib.cpp  networkgame.cpp
cmake/: CompilerFlags.cmake  FindDirectX.cmake  PrecompiledHeaders.cmake  allegiance_compat.h  verify-build.ps1
cvh/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  MODULE_GUIDE.md
drones/: makefile
effect/: CMakeLists.txt  help.cpp  mmlpopup.cpp  panes.cpp  pch.h  thinggeo.cpp
engine/: CMakeLists.txt  caption.cpp  context.cpp  context.h  d3d9device.cpp  d3d9raster.cpp  d3d9surface.cpp  device3d.cpp  dinput.cpp  engine.cpp  enginep.h  enginewindow.cpp  font.cpp  geometry.cpp  image.cpp  modeler.cpp  namespace.cpp  pixelformat.cpp  pixelformat.h  renderdevice.h  softraster.cpp  surface.cpp  value.h  xfile.h
engine/exec/: exec.cpp
fedperf/: cntrmap.h  perfdll.cpp
fedsrvdll/: makefile
guids/: CMakeLists.txt  guids.cpp
lobby/: CMakeLists.txt  Lobby.vcxproj  pch.h
mdlc/: CMakeLists.txt  mdlc.cpp
objs/BChecker/AGC/AGC.tlog/: AGC.lastbuildstate
qhull/: CMakeLists.txt
sentinal/: config.h  sentinal.cpp  sentmsg.h  sentmsg.rc  srvdbg.h
sharemem/: CMakeLists.txt
soundengine/: CMakeLists.txt  ds3dengine.cpp  redbooksound.h  soundtemplates.h
test/TCAtl/: DualEventsCP.h  EventsCP.h
test/TCLib/: UtilityThread.cpp  WorkerThread.cpp
test/TCObj/: TCStrings.cpp
training/: CMakeLists.txt  RepairRearmAction.cpp  mission3.cpp
xmunge/: CMakeLists.txt  xmunge.vcxproj
zlib/: CMakeLists.txt  Win32app.cpp  cast.h  color.cpp  main.h  matrix.cpp  window.cpp  zlib.h  zmath.h  zstring.cpp
